# openai_realtime_client_llamaindex

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
examples/: __init__.py  fastapi_server.py  hal9000_webrtc.py  hal9000_ws.py  manual_cli.py  streaming_cli.py  tools.py  unity_webrtc_server.py  unity_ws_server.py  webrtc_hal9000.py  ws_hal9000.py
examples/app/: server.py
examples/app/static/: app.js
examples/static/: app.js  index.html  style.css
examples/static_webrtc/: app.js  index.html
examples/unity/: README.md  UnityRealtimeConnector.cs
openai_realtime_client/: __init__.py
openai_realtime_client/client/: __init__.py  realtime_client.py
openai_realtime_client/handlers/: __init__.py  audio_handler.py  input_handler.py  rtc_handler.py  ws_handler.py
rag/: __init__.py  rag_tool.py  tools.py
rag_docs/: sample.txt
